# src/main/java/dev/cryss/mongo/userapi/controllers/exception/GlobalExceptionHandler.java
@@ -1,0 +1,26 @@
+package dev.cryss.mongo.userapi.controllers.exception;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.WebRequest;
+
+import java.util.Date;
+
+@ControllerAdvice
+public class GlobalExceptionHandler {
+
+    @ExceptionHandler(ResourceNotFoundException.class)
+    public ResponseEntity<?> resourceNotFoundException(ResourceNotFoundException exception, WebRequest request) {
+        ErrorDetails errorDetails = new ErrorDetails (new Date (), exception.getMessage (), request.getDescription (true));
+        return new ResponseEntity<> (errorDetails, HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<?> globleExcpetionHandler(Exception ex, WebRequest request) {
+        ErrorDetails errorDetails = new ErrorDetails (new Date (), ex.getMessage (), request.getDescription (false));
+        return new ResponseEntity<> (errorDetails, HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+}
