# src/main/java/dev/cryss/mongo/userapi/controllers/exception/ResourceNotFoundException.java
@@ -1,0 +1,16 @@
+package dev.cryss.mongo.userapi.controllers.exception;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.ResponseStatus;
+
+@ResponseStatus(value = HttpStatus.NOT_FOUND)
+public class ResourceNotFoundException extends Exception{
+
+    private static final long serialVersionUID = 1L;
+
+
+    public ResourceNotFoundException(String message){
+        super(message);
+    }
+
+}
