# src/main/java/dev/cryss/mongo/userapi/domain/model/UserDetailEntity.java
@@ -1,0 +1,46 @@
+package dev.cryss.mongo.userapi.domain.model;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.annotation.Transient;
+import org.springframework.data.mongodb.core.index.Indexed;
+import org.springframework.data.mongodb.core.mapping.Document;
+import org.springframework.format.annotation.DateTimeFormat;
+
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.Size;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.Date;
+
+@Document(collection = "UserDetail")
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class UserDetailEntity {
+
+    @Transient
+    public static final String SEQUENCE_NAME = "users_sequence";
+
+    @Id
+    private long id;
+
+    @NotBlank
+    @Size(max = 100)
+    @Indexed(unique = true)
+    private String firstName;
+    private String lastName;
+
+    @DateTimeFormat(iso = DateTimeFormat.ISO.DATE)
+    private LocalDateTime createdAt =LocalDateTime.now ();
+
+
+
+}
